# split_module_files

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  makefile  split_module_files.sln  vcpkg.json
.github/workflows/: ccpp.yml
split_module_files/: packages.config  split_module_files.cpp  split_module_files.vcxproj  split_module_files.vcxproj.filters
src/: split_module_files.cpp
